@@ -1936,3 +1936,10 @@ M       cg_vbm_write.m
     in cg_vbm_write.m
 ------------------------------------------------------------------------
 r477 | gaser | 2013-04-22 11:10:08
+
+M       CHANGES.txt
+M       cg_vbm_write.m
+
+Changed some handling with deformation field in cg_vbm_write.m.
+------------------------------------------------------------------------
+r478 | gaser | 2013-04-22 13:25:47
